--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ body {
 
     margin: 0px;
 
+    padding: 0px;
+
     font-family: "Nunito", sans-serif;
 
     font-size: 0.938rem;
@@ -84,7 +86,7 @@ ul {
 
     margin: auto;
 
-    background-color: #496D96;
+    background-color: #228CDB;
 
 }
 
@@ -92,7 +94,7 @@ ul {
 
     box-sizing: border-box;
 
-    padding-top: 3rem;
+    padding-top: 2rem;
 
     padding-bottom: 2rem;
 
@@ -210,12 +212,16 @@ header.main_header nav.page_nav {
     main.main_dashboard section.home {
 
         height: 100vh;
+
+        border: 1px solid limegreen;
     
     }
     
     main.main_dashboard section.home div.home_data {
     
         align-self: center;
+
+        border: 1px solid limegreen;
     
     }
     
@@ -225,13 +231,15 @@ header.main_header nav.page_nav {
     
         font-weight: 700;
     
-        font-size: 2.5rem;
+        font-size: 2.4rem;
     
         color: #0E2431;
 
         margin-top: 2.5rem;
     
         margin-bottom: 1.5rem;
+
+        border: 1px solid limegreen;
     
     }
     
@@ -255,7 +263,9 @@ header.main_header nav.page_nav {
 
         box-sizing: border-box;
 
-        padding-right: 15px;
+        padding-right: 0px;
+
+        border: 1px solid limegreen;
     
     }
     
@@ -268,6 +278,8 @@ header.main_header nav.page_nav {
         box-sizing: border-box;
 
         margin-bottom: 10px;
+
+        border: 1px solid limegreen;
     
     }
     
@@ -277,7 +289,7 @@ header.main_header nav.page_nav {
 
         font-size: 3.5rem;
 
-        text-shadow: 0px 5px 20px rgba(0, 0, 0, .35);
+        text-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
 
@@ -297,7 +309,7 @@ header.main_header nav.page_nav {
     
         font-size: 4rem;
 
-        text-shadow: 0px 5px 20px rgba(0, 0, 0, .35);
+        text-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
     
@@ -317,7 +329,7 @@ header.main_header nav.page_nav {
 
         font-size: 3.5rem;
 
-        text-shadow: 0px 5px 20px rgba(0, 0, 0, .35);
+        text-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
     
@@ -341,9 +353,11 @@ header.main_header nav.page_nav {
     
         position: absolute;
     
-        left: 15px;
+        left: 10px;
     
-        bottom: 15px;
+        bottom: 10px;
+
+        border: 1px solid limegreen;
 
     }
     
@@ -371,27 +385,27 @@ header.main_header nav.page_nav {
     
         color: #EFEFEB;
     
-        padding: 1.2rem 2.2rem;
+        padding: 1.2rem 2rem;
     
         font-family: "Poppins", sans-serif;
     
         font-weight: 700;
     
-        font-size: 1.5rem;
+        font-size: 22px;
 
-        letter-spacing: 2px;
+        letter-spacing: 3px;
     
         text-transform: uppercase;
 
         text-decoration: none;
     
-        border-radius: .5rem;
+        border-radius: 50px;
 
         margin-top: 12px;
     
         margin-bottom: 0rem;
 
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, .25);
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
     
@@ -401,7 +415,7 @@ header.main_header nav.page_nav {
     
         box-shadow: none;
 
-        transform: scale(0.98);
+        transform: scale(0.95);
     
     }
 
@@ -410,8 +424,12 @@ header.main_header nav.page_nav {
         row-gap: 2rem;
 
         box-sizing: border-box;
+
+        padding: 14px;
     
         text-align: justify;
+
+        border: 1px solid limegreen;
     
     }
     
@@ -429,7 +447,9 @@ header.main_header nav.page_nav {
     
         background-position: center;
     
-        background-size: 360px;
+        background-size: 380px;
+
+        border: 1px solid limegreen;
     
     }
 
@@ -443,9 +463,7 @@ header.main_header nav.page_nav {
     
         color: #464146;
 
-        box-sizing: border-box;
-
-        padding: 0px;
+        border: 1px solid limegreen;
 
     }
     
@@ -463,6 +481,8 @@ header.main_header nav.page_nav {
 
         margin: 10px auto;
 
+        border: 1px solid limegreen;
+
     }
 
     section.services div.container div.carousel {
@@ -472,6 +492,8 @@ header.main_header nav.page_nav {
         position: relative;
 
         overflow: hidden;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -484,6 +506,8 @@ header.main_header nav.page_nav {
         display: flex;
 
         transition: all 0.3s;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -499,6 +523,8 @@ header.main_header nav.page_nav {
 
         transform: translate(-0%);
 
+        border: 1px solid limegreen;
+
     }
 
     section.services div.container div.carousel div.controls span.arrow {
@@ -513,22 +539,21 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.controls span.left {
 
-        left: 10px;
+        left: 50px;
 
-        color: #B1BECD;
+        bottom: 5px;
 
-        display: none;
+        color: #354B6C;
 
     }
 
     section.services div.container div.carousel div.controls span.right {
 
-        right: 10px;
+        right: 50px;
 
-        color: #B1BECD;
+        bottom: 5px;
 
-        display: none;
-
+        color: #354B6C;
     }
 
     section.services div.container div.carousel div.controls ul#section_indicators {
@@ -537,7 +562,7 @@ header.main_header nav.page_nav {
 
         left: 50%;
 
-        bottom: 15px;
+        bottom: 10px;
 
         transform: translate(-50%);
 
@@ -552,6 +577,10 @@ header.main_header nav.page_nav {
         padding: 0px;
 
         background-color: transparent;
+
+        display: none;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -589,6 +618,8 @@ header.main_header nav.page_nav {
 
         box-sizing: border-box;
 
+        border: 1px solid limegreen;
+
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider1_right_col {
@@ -604,6 +635,8 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -621,6 +654,8 @@ header.main_header nav.page_nav {
 
         background-position: center;
 
+        border: 1px solid limegreen;
+
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider3_right_col {
@@ -636,6 +671,8 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -653,6 +690,8 @@ header.main_header nav.page_nav {
 
         background-position: center;
 
+        border: 1px solid limegreen;
+
     }
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider5_right_col {
@@ -668,6 +707,8 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -687,6 +728,8 @@ header.main_header nav.page_nav {
 
         padding: 0px 20px 0px 20px;
 
+        border: 1px solid limegreen;
+
     }
 
     section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col h2.slider_title {
@@ -695,7 +738,7 @@ header.main_header nav.page_nav {
 
         font-weight: 700;
 
-        font-size: 20px;
+        font-size: 22px;
 
         box-sizing: border-box;
 
@@ -707,6 +750,8 @@ header.main_header nav.page_nav {
 
         text-transform: uppercase;
 
+        border: 1px solid limegreen;
+
     }
 
     section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col p.slider_content {
@@ -715,13 +760,15 @@ header.main_header nav.page_nav {
 
         font-weight: 400;
 
-        font-size: 0.9rem;
+        font-size: 0.95rem;
 
         color: #464146;
 
         text-align: justify;
 
         align-self: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -733,27 +780,27 @@ header.main_header nav.page_nav {
     
         color: #EFEFEB;
     
-        padding: 1.2rem 2.2rem;
+        padding: 1.2rem 2rem;
     
         font-family: "Poppins", sans-serif;
     
         font-weight: 700;
     
-        font-size: 1.5rem;
+        font-size: 22px;
 
-        letter-spacing: 2px;
+        letter-spacing: 3px;
     
         text-transform: uppercase;
 
         text-decoration: none;
     
-        border-radius: .5rem;
+        border-radius: 50px;
 
         margin-top: 100px;
     
         margin-bottom: 50px;
 
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, .25);
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
 
@@ -775,11 +822,15 @@ header.main_header nav.page_nav {
 
         flex-direction: column;
 
+        border: 1px solid limegreen;
+
     }
 
     section.teams div.container div.team_left_col {
 
         flex-basis: 20%;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -794,6 +845,8 @@ header.main_header nav.page_nav {
         background-repeat: no-repeat;
 
         background-position: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -813,6 +866,8 @@ header.main_header nav.page_nav {
 
         padding: 0px 20px 0px 20px;
 
+        border: 1px solid limegreen;
+
     }
 
     section.teams div.container div.team_right_col h3.team_subtitle {
@@ -821,13 +876,15 @@ header.main_header nav.page_nav {
 
         font-weight: 700;
 
-        font-size: 20px;
+        font-size: 22px;
 
         color: #496D96;
 
         text-transform: uppercase;
 
         text-align: center;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -837,11 +894,13 @@ header.main_header nav.page_nav {
 
         font-weight: 400;
 
-        font-size: 1.1rem;
+        font-size: 1rem;
 
         color: #464146;
 
         text-align: justify;
+
+        border: 1px solid limegreen;
 
     }
 
@@ -853,27 +912,27 @@ header.main_header nav.page_nav {
     
         color: #EFEFEB;
     
-        padding: 1.2rem 2.2rem;
+        padding: 1.2rem 2rem;
     
         font-family: "Poppins", sans-serif;
     
         font-weight: 700;
     
-        font-size: 1.5rem;
+        font-size: 22px;
 
-        letter-spacing: 2px;
+        letter-spacing: 3px;
     
         text-transform: uppercase;
 
         text-decoration: none;
     
-        border-radius: .5rem;
+        border-radius: 50px;
 
         margin-top: 30px;
     
-        margin-bottom: 30px;
+        margin-bottom: 15px;
 
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, .25);
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
         transition: all 0.1s;
 
@@ -955,7 +1014,7 @@ header.main_header nav.page_nav div.nav_toggle {
 
     color: #0E2431;
 
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 
     cursor: pointer;
 
@@ -977,11 +1036,11 @@ header.main_header nav.page_nav div.nav_toggle {
 
     justify-content: center;
 
-    border-radius: .5rem;
+    border-radius: 50px;
 
     backdrop-filter: blur(20px);
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, .25);
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, .30);
 
 }
 
@@ -996,12 +1055,16 @@ header.main_header nav.page_nav div.nav_toggle {
     main.main_dashboard section.home {
 
         height: 100vh;
+
+        border: 1px solid red;
     
     }
     
     main.main_dashboard section.home div.home_data {
     
         align-self: center;
+
+        border: 1px solid red;
     
     }
     
@@ -1018,6 +1081,8 @@ header.main_header nav.page_nav div.nav_toggle {
         margin-top: 3.7rem;
     
         margin-bottom: 3.5rem;
+
+        border: 1px solid red;
     
     }
     
@@ -1042,6 +1107,8 @@ header.main_header nav.page_nav div.nav_toggle {
         box-sizing: border-box;
 
         padding-right: 10px;
+
+        border: 1px solid red;
     
     }
     
@@ -1054,6 +1121,8 @@ header.main_header nav.page_nav div.nav_toggle {
         box-sizing: border-box;
 
         margin-bottom: 10px;
+
+        border: 1px solid red;
     
     }
     
@@ -1130,6 +1199,8 @@ header.main_header nav.page_nav div.nav_toggle {
         left: 15px;
     
         bottom: 15px;
+
+        border: 1px solid red;
 
     }
     
